--- a/src/components/EditPost/EditPost.css
+++ b/src/components/EditPost/EditPost.css
@@ -8,34 +8,37 @@
 
 .editpost-container .container {
   display: flex;
-  justify-content: center;
+  padding-top: 3vh;
   align-items: center;
-  padding-top: 8vh;
   padding-bottom: 12vh;
+  justify-content: center;
 }
 
 .editpost-container .container .card {
+  width: 60%;
+  border: none;
   padding: 1rem;
-  border-radius: 10px;
-  width: 55rem;
+  border-radius: 7px;
+  background-color: transparent;
 }
 
 .editpost-container .container .card .heading {
   font-size: 2.2rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 /* input type file */
 .editpost-container .container .card form label {
-  font-size: 1.3rem;
-  font-weight: 700;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
 
 .editpost-container .container .card form .img-preview {
-  width: 60%;
+  width: 100%;
   height: 30vh;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-bottom: 1rem;
 }
 
@@ -46,13 +49,14 @@
 }
 
 .editpost-container .container .card form .remove-image {
-  background: #f44336;
+  width: 100%;
+  border: none;
   color: #fff;
-  border-radius: 7px;
   cursor: pointer;
   font-size: medium;
   font-weight: bold;
-  width: 10vw;
+  border-radius: 5px;
+  background-color: #f44336;
 }
 
 .editpost-container .container .card form .remove-image:hover {
@@ -60,31 +64,31 @@
 }
 
 .editpost-container .container .card form input[type="file"] {
-  width: 30%;
-  padding: 0.5rem;
-  border-radius: 10px;
-  border: 1px solid #ccc;
+  width: 100%;
+  border-radius: 5px;
   margin-bottom: 1rem;
+  border: 1px solid #ddd;
 }
 
-.editpost-container .container .card form input[type="text"] {
-  width: 80%;
-  color: #000;
-  font-size: 2rem;
-  font-weight: bolder;
+.editpost-container .container .card form .postTitle {
+  width: 100%;
   border: none;
+  color: #222;
+  font-size: 2rem;
+  font-weight: bold;
   margin-bottom: 3rem;
+  background-color: transparent;
 }
 
-.editpost-container .container .card form input[type="text"]:focus {
+.editpost-container .container .card form .postTitle:focus {
   outline: none;
   box-shadow: none;
 }
 
-.editpost-container .container .card form input[type="text"]::placeholder {
-  color: #000;
+.editpost-container .container .card form .postTitle::placeholder {
+  color: #2224;
   font-size: 2rem;
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 .editpost-container .container .card form .ck-editor__editable {
@@ -93,19 +97,29 @@
 
 .editpost-container .container .card form .submit {
   width: 9rem;
-  border-radius: 7px;
   border: none;
   padding: 0.3rem;
-  background-color: #a549da;
-  font-size: 1.3rem;
   font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 4px;
+  background-color: #368dd6;
 }
 
 .editpost-container .container .card .error {
   color: #f44336;
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: bold;
   margin-top: 1rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
   margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 786px) {
+  .editpost-container .container .card {
+    width: 100%;
+  }
+
+  .editpost-container .container .card form .submit {
+    width: 100%;
+  }
 }
