--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,34 +3,38 @@
 }
 
 .home-container {
-  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  min-height: 76vh;
+  place-items: center;
+  flex-direction: column;
 }
 
 .home-container .main-heading {
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-left: 4rem;
-  margin-top: 1rem;
   color: #368dd6;
+  font-weight: 700;
+  margin-top: 1rem;
+  font-size: 2.2rem;
 }
 
 .home-container .container {
-  padding-top: 3vh;
+  margin: 0;
+  width: 50%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
+  padding-top: 3vh;
   border-radius: 6px;
   margin-bottom: 30px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .home-container .loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .home-container .loader svg {
@@ -39,48 +43,66 @@
 }
 
 .home-container .blog-card {
-  margin-bottom: 30px;
-  width: 40rem;
-  border-radius: 12px;
-  cursor: pointer;
+  width: 90%;
+  cursor: default;
+  border-radius: 6px;
+  margin-bottom: 40px;
 }
 
 .home-container .blog-card .card-img-top {
-  height: 30vh;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  height: 40vh;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .home-container .blog-card .card-body {
-  padding: 0.5rem;
+  padding: 1rem 1rem 2rem 1rem;
 }
 
 .home-container .blog-card .card-body h1 {
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-weight: 700;
   margin-bottom: 0.5rem;
-  transition-duration: 0.3s;
 }
 
-.home-container .blog-card .card-body h1:hover {
-  color: #368dd6;
+.home-container .blog-card .createdAt {
+  display: flex;
 }
 
-.home-container .blog-card .card-body .blog-info {
-  font-size: 1rem;
-  font-weight: 500;
-  margin-bottom: 0.1rem;
-  color: #181717;
+.home-container .blog-card .createdAt .date {
+  color: #777;
+  font-weight: 400;
+  font-size: 0.8rem;
+  font-style: italic;
+  margin-right: 1rem;
+}
+
+.home-container .blog-card .createdAt .category {
+  color: #fff;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 0.65rem;
+  margin-right: 1rem;
+  border-radius: 15px;
+  padding: 0.1rem 0.6rem;
+  text-transform: uppercase;
+  background-color: #368dd6;
 }
 
 .home-container .blog-card .card-body .blog-items {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 1rem;
-  font-weight: 600;
-  color: #181717;
   margin-top: 1rem;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.home-container .blog-card .card-body .blog-items .readMore {
+  border: none;
+  background-color: #368dd6;
+}
+
+.home-container .blog-card .card-body .blog-items .readMore:hover {
+  background-color: #257cc5;
 }
 
 .home-container .blog-card .card-body .blog-items span {
@@ -90,12 +112,5 @@
 @media (max-width: 992px) {
   .home-container {
     flex-direction: column;
-  }
-
-  .home-container .blog-card {
-    margin-bottom: 30px;
-    width: 20rem;
-    border-radius: 12px;
-    cursor: pointer;
   }
 }
