--- a/src/components/CreatePost/CreatePost.css
+++ b/src/components/CreatePost/CreatePost.css
@@ -103,11 +103,9 @@
 
 .createpost-container .container .card .error {
   color: #f44336;
-  margin-top: 1rem;
-  font-size: 1.1rem;
-  font-weight: bold;
+  margin: 1rem 0;
+  font-size: 1rem;
   text-align: center;
-  margin-bottom: 1rem;
 }
 
 @media only screen and (max-width: 786px) {
