--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,10 +11,11 @@
 }
 
 .home-container .main-heading {
+  margin: 0;
   color: #368dd6;
   font-weight: 700;
-  margin-top: 1rem;
-  font-size: 2.2rem;
+  font-size: 1.9rem;
+  margin-right: 1rem;
 }
 
 .home-container .container {
@@ -29,17 +30,24 @@
   justify-content: center;
 }
 
+.home-container .container .explore #selectForm {
+  margin: 0;
+}
+
+.home-container .container .explore {
+  display: flex;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  place-items: center;
+  justify-content: center;
+}
+
 .home-container .loader {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.home-container .loader svg {
-  width: 200px;
-  height: 200px;
 }
 
 .home-container .blog-card {
@@ -60,8 +68,8 @@
 }
 
 .home-container .blog-card .card-body h1 {
-  font-size: 2rem;
   font-weight: 700;
+  font-size: 1.8rem;
   margin-bottom: 0.5rem;
 }
 
@@ -83,7 +91,7 @@
   font-weight: 600;
   font-size: 0.65rem;
   margin-right: 1rem;
-  border-radius: 15px;
+  border-radius: 3px;
   padding: 0.1rem 0.6rem;
   text-transform: uppercase;
   background-color: #368dd6;
@@ -105,12 +113,68 @@
   background-color: #257cc5;
 }
 
-.home-container .blog-card .card-body .blog-items span {
-  padding-right: 1.7rem;
+.home-container .latest-news {
+  width: 79%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  justify-content: space-between;
 }
 
-@media (max-width: 992px) {
+.home-container .latest-news div:nth-of-type(1) {
+  flex-grow: 4;
+}
+
+.home-container .explore .resetCategory {
+  cursor: pointer;
+  border-radius: 4px;
+  margin-left: 0.5rem;
+  padding: 0.3rem 0.8rem;
+  border: 1px solid #1111;
+  transition-duration: 0.4s;
+  background-color: #f5f5f5;
+}
+
+.home-container .explore .resetCategory:hover {
+  background-color: #d5d5d5;
+}
+
+@media only screen and (max-width: 1024px) {
   .home-container {
     flex-direction: column;
+  }
+
+  .home-container .container {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .home-container .latest-news {
+    width: 90%;
+  }
+
+  .home-container .container {
+    width: 100%;
+  }
+
+  .home-container .blog-card {
+    width: 100%;
+  }
+
+  .home-container .container .explore {
+    width: 100%;
+    flex-direction: column;
+    place-items: flex-start;
+  }
+
+  .home-container .container .explore h1 {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .home-container .container .explore div {
+    width: 100%;
+    justify-content: flex-end;
   }
 }
