fix notification bug
Signed-off-by: Allwell Onen <aleenfestus@gmail.com>

--- a/src/components/NewsCards/NewsCard.css
+++ b/src/components/NewsCards/NewsCard.css
@@ -17,7 +17,7 @@
   padding: 1rem;
   border-radius: 5px;
   flex-direction: column;
-  background-color: #1117;
+  background-color: #111a;
   transition-duration: 0.8s;
 }
 
