--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -61,6 +61,10 @@
   background-color: transparent;
 }
 
+.blog-container .blog .card .blog-image {
+  max-height: 35rem;
+}
+
 .blog-container .blog .card .card-body {
   padding: 0.5rem;
 }
