--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -3,12 +3,9 @@
 }
 
 .search-container .main-heading {
-  color: #368dd6;
-  font-weight: 700;
-  margin-top: 1rem;
-  font-size: 2.1rem;
+  margin: 2rem 0;
+  font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 2rem;
 }
 
 .search-container .loader {
@@ -30,84 +27,8 @@
   margin-bottom: 30px;
 }
 
-.search-container .blog-card {
-  width: 90%;
-  cursor: default;
-  border-radius: 6px;
-  margin-bottom: 40px;
-}
-
-.search-container .blog-card .card-img-top {
-  height: 40vh;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-}
-
-.search-container .blog-card .card-body {
-  padding: 1rem 1rem 2rem 1rem;
-}
-
-.search-container .blog-card .card-body h1 {
-  font-size: 2rem;
-  font-weight: 700;
-  margin-bottom: 0.5rem;
-}
-
-.search-container .blog-card .createdAt {
-  display: flex;
-}
-
-.search-container .blog-card .createdAt .date {
-  color: #777;
-  font-weight: 400;
-  font-size: 0.8rem;
-  font-style: italic;
-  margin-right: 1rem;
-}
-
-.search-container .blog-card .createdAt .category {
-  color: #fff;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 0.65rem;
-  margin-right: 1rem;
-  border-radius: 3px;
-  padding: 0.1rem 0.6rem;
-  text-transform: uppercase;
-  background-color: #368dd6;
-}
-
-.search-container .blog-card .card-body .blog-items {
-  display: flex;
-  margin-top: 1rem;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.search-container .blog-card .card-body .blog-items .readMore {
-  border: none;
-  background-color: #368dd6;
-}
-
-.search-container .blog-card .card-body .blog-items .readMore:hover {
-  background-color: #257cc5;
-}
-
-.search-container .blog-card .blog-title {
-  font-size: 1.8rem;
-}
-
 .search-container h1.message {
-  font-size: 1.7rem;
-}
-
-@media (max-width: 992px) {
-  .search-container .blog-card {
-    margin-bottom: 30px;
-    width: 20rem;
-    border-radius: 12px;
-    cursor: pointer;
-  }
+  font-size: 1.3rem;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -122,10 +43,6 @@
 
 @media only screen and (max-width: 768px) {
   .search-container .container {
-    width: 100%;
-  }
-
-  .search-container .blog-card {
     width: 100%;
   }
 }
