--- a/src/components/404NotFound/NotFound.style.css
+++ b/src/components/404NotFound/NotFound.style.css
@@ -2,7 +2,7 @@
   font-family: "Ubuntu", sans-serif;
 }
 
-.notFound {
+.not-found {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -11,17 +11,29 @@
   justify-content: center;
 }
 
-.notFound .illustration {
+.not-found .illustration {
   width: 25%;
   height: 30%;
 }
 
-.notFound .page-not-found {
+.not-found .page-not-found {
   font-size: 50px;
   color: #409cb5;
   font-weight: 600;
 }
 
-.notFound .back-button {
+.not-found .back-button {
   color: #3e8ea3;
+}
+
+@media only screen and (max-width: 530px) {
+  .not-found .illustration {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .not-found .page-not-found {
+    font-size: 32px;
+  }
 }
