--- a/src/components/NewsCards/NewsCardSmall.css
+++ b/src/components/NewsCards/NewsCardSmall.css
@@ -1,22 +1,25 @@
-.blog-card {
-  width: 90%;
+.post-card {
+  margin: 0;
+  width: 80%;
   cursor: default;
   border-radius: 6px;
-  margin-bottom: 40px;
+  margin-bottom: 2rem;
+  border: 1px solid #2222;
 }
 
-.blog-card .card-img-top {
+.post-card .card-img-top {
   height: 40vh;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
 }
 
-.blog-card .card-body {
+.post-card .card-body {
   padding: 1rem;
   border-radius: 0 0 6px;
+  background-color: #fff;
 }
 
-.blog-card .card-body .menu-container {
+.post-card .card-body .menu-container {
   top: 0;
   right: 0;
   width: 100%;
@@ -31,43 +34,43 @@
   border-top-right-radius: 6px;
 }
 
-.blog-card .card-body .menu-container .post-menu-items svg {
+.post-card .card-body .menu-container .post-menu-items svg {
   width: 25px;
   height: 25px;
 }
 
-.blog-card .card-body .post-title {
+.post-card .card-body .post-title {
   font-weight: 500;
   font-size: 1.4rem;
   margin-top: 1.6rem;
   margin-bottom: 0.5rem;
 }
 
-.blog-card .created-at {
+.post-card .created-at {
   display: flex;
   place-items: center;
   justify-content: center;
 }
 
-.blog-card .created-at .divider {
+.post-card .created-at .divider {
   width: 1px;
   height: 20px;
   margin: 0 0.5rem;
   background-color: #3336;
 }
 
-.blog-card .card-body .blog-items {
+.post-card .card-body .blog-items {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-.blog-card .card-body .blog-items .read-more {
+.post-card .card-body .blog-items .read-more {
   font-weight: 500;
   font-size: 0.8rem;
 }
 
-.blog-card .card-body-bottom {
+.post-card .card-body-bottom {
   display: flex;
   margin-top: 2rem;
   place-items: center;
@@ -75,7 +78,7 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  .blog-card {
+  .post-card {
     width: 70%;
     cursor: pointer;
     margin-bottom: 30px;
@@ -83,46 +86,46 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .blog-card {
+  .post-card {
     width: 95%;
   }
 }
 
 @media only screen and (max-width: 426px) {
-  .blog-card .card-body-bottom {
+  .post-card .card-body-bottom {
     flex-direction: column;
     place-items: flex-start;
   }
 
-  .blog-card .card-body-bottom .created-at {
+  .post-card .card-body-bottom .created-at {
     margin-bottom: 1rem;
   }
 
-  .blog-card .card-body-bottom .blog-items,
-  .blog-card .card-body-bottom .blog-items .read-more {
+  .post-card .card-body-bottom .blog-items,
+  .post-card .card-body-bottom .blog-items .read-more {
     width: 100%;
   }
 }
 
 @media only screen and (max-width: 320px) {
-  .blog-card .card-body h1 .post-title {
+  .post-card .card-body h1 .post-title {
     font-size: 1rem;
   }
 
-  .blog-card .card-body-bottom {
+  .post-card .card-body-bottom {
     margin-top: 0.5rem;
   }
 
-  .blog-card .card-body-bottom .created-at {
+  .post-card .card-body-bottom .created-at {
     flex-direction: column;
     place-items: flex-start;
   }
 
-  .blog-card .card-body-bottom .created-at .divider {
+  .post-card .card-body-bottom .created-at .divider {
     display: none;
   }
 
-  .blog-card .card-body-bottom .created-at .date {
+  .post-card .card-body-bottom .created-at .date {
     font-size: 0.7rem;
     margin-bottom: 0.4rem;
   }
