Re-build navbar
Signed-off-by: Allwell Onen <aleenfestus@gmail.com>

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,7 +9,7 @@
   font-size: 0.9rem;
   text-align: center;
   position: relative;
-  background-color: #368dd6;
+  background-color: #485fc7;
 }
 
 .footer .footerLogoLink {
